# serial_cli

./: .gitignore  .serial-cli.toml  BACKEND_COMPLETION_REPORT.md  CHANGELOG.md  CHANGELOG_WINDOWS.md  CLAUDE.md  CODE_REVIEW_DETAILED.md  CODE_REVIEW_FIXES.md  COMPLETION_REPORT.md  CROSS_COMPILE.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  DOCS.md  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE.md  LICENSE-APACHE  LICENSE-MIT  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_COMPLETE_FINAL.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_PLAN.md  TEST_REPORT.md  TODO.md  TODO_CLI.md  TODO_UI.md  TODO_WINDOWS.md  UI.md  (+13 more)
.cargo/: config.toml
.github/: cliff.toml  commitlint.config.js  dependabot.yml
.github/workflows/: ci.yml  commit-lint.yml  coverage.yml  gui-release.yml  release.yml  security.yml  version-bump.yml
benches/: concurrency.rs  io_latency.rs  io_throughput.rs  lua_execution.rs  performance.rs  protocol_parsing.rs
benches/common/: data_generator.rs  mod.rs  virtual_serial.rs
config/: default.toml
docs/: COVERAGE.md  DOCUMENTATION_UPDATE.md  GUIDE.md  INDEX.md  MATURITY_SUMMARY.md  PERFORMANCE_TESTING.md  PLATFORM_SIGNALS.md  TROUBLESHOOTING.md  VIRTUAL_SERIAL.md  windows.md
docs/commands/: batch.md  benchmark.md  config.md  list-ports.md  protocol.md  run-script.md  sniff.md  virtual.md
docs/dev/: ARCH.md  CODE_REVIEW.md  REFACTORING_REPORT.md
docs/features/: virtual_serial.md
docs/guides/: getting-started.md  interactive-shell.md
docs/reference/: configuration.md  lua-scripting.md  protocols.md  troubleshooting.md
docs/superpowers/plans/: 2026-04-01-infrastructure-implementation.md  2026-04-02-lua-serial-protocol-tools.md  2026-04-03-benchmark-suite.md  2026-04-05-lua-protocol-extension.md
docs/superpowers/specs/: 2026-04-01-infrastructure-design.md  2026-04-03-benchmark-design.md  2026-04-05-lua-protocol-extension-design.md  2026-04-06-build-release-pipeline-design.md  2026-04-24-v0.5.0-performance-optimization-design.md  2026-04-24-virtual-port-backends-design.md  2026-04-25-virtual-serial-pair-unified-architecture-design.md
docs/user/: TODO.md
examples/: at_commands.lua  basic_io.lua  checksum_protocol.lua  comprehensive_test.lua  custom_protocol.lua  modbus_test.lua  modbus_with_tools.lua  protocol_extension_demo.lua  protocol_test_virtual.lua  raw_echo.lua  test_protocol.lua  virtual_port_demo.rs  virtual_serial_example.lua  windows_serial_example.lua
frontend/: TODO.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/contexts/: DataContext.tsx  NavigationContext.tsx  NotificationContext.tsx  PortContext.tsx  ScriptActionContext.tsx  SettingsContext.tsx  ShortcutContext.tsx  ToastContext.tsx  VirtualPortContext.tsx
frontend/src/hooks/: useGlobalShortcuts.ts  (+1 more)
scripts/: migrate_to_tracing.sh  release.sh  test-gui.sh  update-packages.sh
scripts/gui/: build.sh  prepare-release.sh  test-install.sh  update-version.sh
scripts/package/: build.sh  check-release.sh  generate_aur.sh  prepare-release.sh  release.sh  update_homebrew.sh  update_scoop.sh  verify-release.sh  verify_packages.sh
src/: config.rs  error.rs  error_handling.rs  lib.rs  logging.rs  main.rs  monitoring.rs  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  tray.rs
src-tauri/src/commands/: config.rs  mod.rs  port.rs  protocol.rs  script.rs  serial.rs  virtual_port.rs  window.rs
src-tauri/src/events/: emitter.rs  mod.rs
src-tauri/src/state/: app_state.rs  mod.rs  port_state.rs
src-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-ui/src/: App.tsx  index.css  main.tsx
src-ui/src-ui/: UI.md
src/benchmark/: mod.rs  reporter.rs  runner.rs
src/cli/: args.rs  batch.rs  commands.rs  interactive.rs  json.rs  mod.rs  sniff_session.rs  types.rs
src/lua/: bindings.rs  cache.rs  engine.rs  executor.rs  mod.rs  pool.rs  stdlib.rs
src/monitoring/: mod.rs  windows.rs
src/protocol/: loader.rs  lua_ext.rs  manager.rs  mod.rs  registration.rs  registry.rs  validator.rs  watcher.rs
src/serial_core/: factory.rs  io_loop.rs  mod.rs  port.rs  signals.rs  sniffer.rs  virtual_port.rs  windows_signals.rs
src/task/: executor.rs  mod.rs  monitor.rs  queue.rs
tests/: concurrency_stress_tests.rs  integration_tests.rs  lua_integration_tests.rs  protocol_manager_test.rs
(+94 files in other folders)
