[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "serial-cli"
version = "0.1.0"
edition = "2021"
authors = ["Serial CLI Contributors"]
description = "A universal serial port CLI tool optimized for AI interaction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/serial-cli"
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-serial = "5.4"
serialport = "4.3"
libc = "0.2"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_Security", "Win32_Devices_Communication", "Win32_System_Diagnostics_Debug"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Lua integration
mlua = { version = "0.9", features = ["luajit", "async", "vendored"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }
rustyline = "18.0"

# Utilities
bytes = "1.5"
base64 = "0.22"

# File watching
notify = "6.1"

# Configuration
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
once_cell = "1.19"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = "0.5"
rustyline = "18.0.0"
rand = "0.10"
libc = "0.2"
tempfile = "3.8"

[[example]]
name = "virtual_port_demo"
path = "examples/virtual_port_demo.rs"

[[bin]]
name = "serial-cli"
path = "src/main.rs"

[[bench]]
name = "io_throughput"
harness = false

[[bench]]
name = "io_latency"
harness = false

[[bench]]
name = "protocol_parsing"
harness = false

[[bench]]
name = "lua_execution"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "performance"
harness = false

[lib]
name = "serial_cli"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.cross]
# Cross-compilation configuration
